--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "Ana-Arribasplata-Resume",
   "version": "1.0.0",
   "main": "main.js",
+  "homepage": "http://arrb.github.io/aarribasplata",
   "scripts": {
     "start": "webpack-dev-server --progress --port 5200",
-    "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail"
+    "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "email": "anac.arribasplata@gmail.com",
   "devDependencies": {
+    "@material-ui/core": "^4.10.2",
+    "@material-ui/icons": "^4.9.1",
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
@@ -16,14 +21,18 @@
     "babel-preset-react": "^6.23.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
+    "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.8.0",
     "exports-loader": "^0.6.4",
     "extract-text-webpack-plugin": "2.0.0",
     "file-loader": "^0.9.0",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^2.16.1",
     "image-webpack-loader": "^3.3.0",
     "node-sass": "^4.5.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "postcss-loader": "^1.3.3",
+    "react-burger-menu": "^2.6.13",
     "react-css-modules": "^4.2.0",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
@@ -37,8 +46,16 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "babel-polyfill": "^6.26.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.6.2"
+    "emailjs-com": "^2.4.1",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
+    "react-slideshow-image": "^1.5.3",
+    "react-slidez": "0.0.31",
+    "react-spinners": "^0.8.3"
   }
 }
