--- a/package.json
+++ b/package.json
@@ -1,49 +1,61 @@
 {
   "name": "Ana-Arribasplata-Resume",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "src/index.js",
+  "unpkg": "dist/index.js",
   "homepage": "http://arrb.github.io/aarribasplata",
+  "engineStrict": true,
+  "engines": {
+    "node": ">=12.9.1"
+  },
   "scripts": {
-    "start": "webpack-dev-server --progress --port 5200",
-    "build": "rimraf dist && webpack --config webpack-dev-server --progress --profile --bail",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "start": "webpack --mode=development --watch",
+    "dev": "webpack-dev-server --progress --port 3000 --hot --inline",
+    "build": "webpack --mode=production"
   },
   "email": "anac.arribasplata@gmail.com",
   "devDependencies": {
+    "@babel/core": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
+    "@babel/preset-react": "^7.10.1",
+    "@babel/preset-stage-0": "^7.8.3",
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
-    "autoprefixer": "^6.7.7",
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-es2016": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
+    "@material-ui/styles": "^4.10.0",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-lodash": "^3.3.2",
+    "babel-plugin-react-transform": "^3.0.0",
+    "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.8.0",
     "exports-loader": "^0.6.4",
-    "extract-text-webpack-plugin": "2.0.0",
-    "file-loader": "^0.9.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^6.0.0",
     "gh-pages": "^3.1.0",
-    "html-webpack-plugin": "^2.16.1",
+    "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^3.3.0",
     "node-sass": "^4.5.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "postcss-loader": "^1.3.3",
+    "postcss-loader": "^3.0.0",
     "react-burger-menu": "^2.6.13",
     "react-css-modules": "^4.2.0",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "rimraf": "^2.7.1",
     "sass-loader": "^6.0.3",
+    "script-ext-html-webpack-plugin": "^2.1.3",
     "style-loader": "^0.13.1",
     "tabletop": "^1.5.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^0.5.8",
-    "webpack": "2.2.1",
-    "webpack-dev-server": "2.4.1",
-    "webpack-merge": "^4.1.0"
+    "webpack": "^4.29.3",
+    "webpack-cli": "3.2.3",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
@@ -57,5 +69,20 @@
     "react-slideshow-image": "^1.5.3",
     "react-slidez": "0.0.31",
     "react-spinners": "^0.8.3"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
