--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "babel-plugin-react-transform": "^3.0.0",
     "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.26.4",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.8.0",
     "exports-loader": "^0.6.4",
@@ -39,17 +39,19 @@
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^3.3.0",
-    "node-sass": "^4.5.2",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "postcss-loader": "^3.0.0",
     "react-burger-menu": "^2.6.13",
     "react-css-modules": "^4.2.0",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
+    "resolve-url-loader": "^3.1.1",
     "rimraf": "^2.7.1",
-    "sass-loader": "^6.0.3",
+    "sass-loader": "^8.0.2",
     "script-ext-html-webpack-plugin": "^2.1.3",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.13.2",
     "tabletop": "^1.5.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^0.5.8",
