--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "unpkg": "dist/index.js",
-  "homepage": "http://arrb.github.io/aarribasplata",
+  "homepage": "http://arrb.github.io/",
   "engineStrict": true,
   "engines": {
     "node": ">=12.9.1"
@@ -11,6 +11,7 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
+    "deploy2": "gh-pages -d build",
     "start": "webpack --mode=development --watch",
     "dev": "webpack-dev-server --progress --port 3000 --hot --inline",
     "build": "webpack --mode=production"
