--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
-    "deploy2": "gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "start": "webpack --mode=development --watch",
     "dev": "webpack-dev-server --progress --port 3000 --hot --inline",
     "build": "webpack --mode=production"
@@ -67,6 +66,7 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "babel-polyfill": "^6.26.0",
     "emailjs-com": "^2.4.1",
+    "gh-pages-deploy": "^0.5.1",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-slideshow-image": "^1.5.3",
