--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "start": "webpack --mode=development --watch",
     "dev": "webpack-dev-server --progress --port 3000 --hot --inline",
     "build": "webpack --mode=production"
