--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.4",
+    "cssnano": "^4.1.10",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.8.0",
     "exports-loader": "^0.6.4",
+    "extract-loader": "^5.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^6.0.0",
     "gh-pages": "^3.1.0",
@@ -42,6 +44,7 @@
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "postcss-loader": "^3.0.0",
+    "precss": "^4.0.0",
     "react-burger-menu": "^2.6.13",
     "react-css-modules": "^4.2.0",
     "react-router": "^4.0.0",
